refactor: move constructs to jdk11/17 alternatives